--- a/TournamentTracker/TournamentTrackerWPFUI/TournamentTrackerWPFUI.csproj
+++ b/TournamentTracker/TournamentTrackerWPFUI/TournamentTrackerWPFUI.csproj
@@ -6,6 +6,11 @@
     <UseWPF>true</UseWPF>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <AllowUnsafeBlocks>false</AllowUnsafeBlocks>
+    <Optimize>false</Optimize>
+  </PropertyGroup>
+
   <ItemGroup>
     <PackageReference Include="MahApps.Metro" Version="2.4.3" />
   </ItemGroup>
