--- a/TournamentTracker/TournamentTracker/TournamentTracker.csproj
+++ b/TournamentTracker/TournamentTracker/TournamentTracker.csproj
@@ -8,6 +8,7 @@
     <PackageReference Include="Dapper" Version="2.0.78" />
     <PackageReference Include="System.Configuration.ConfigurationManager" Version="5.0.0" />
     <PackageReference Include="System.Data.SqlClient" Version="4.8.2" />
+    <PackageReference Include="Telegram.Bot" Version="15.7.1" />
   </ItemGroup>
 
 </Project>
