Move data connectors and models to separated DLLs

--- a/TournamentTracker/TournamentTrackerWPFUI/TournamentTrackerWPFUI.csproj
+++ b/TournamentTracker/TournamentTrackerWPFUI/TournamentTrackerWPFUI.csproj
@@ -16,6 +16,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\TournamentTracker.Domain\TournamentTracker.Domain.csproj" />
     <ProjectReference Include="..\TournamentTracker\TournamentTracker.csproj" />
   </ItemGroup>
 
