--- a/TournamentTracker/TournamentTracker/TournamentTracker.csproj
+++ b/TournamentTracker/TournamentTracker/TournamentTracker.csproj
@@ -11,4 +11,9 @@
     <PackageReference Include="Telegram.Bot" Version="15.7.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\TournamentTracker.Data\TournamentTracker.Data.csproj" />
+    <ProjectReference Include="..\TournamentTracker.Domain\TournamentTracker.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
