Change namespace from TournamentTracker to TournamentTracker.BusinessLogic

--- a/TournamentTracker/TournamentTrackerWPFUI/TournamentTrackerWPFUI.csproj
+++ b/TournamentTracker/TournamentTrackerWPFUI/TournamentTrackerWPFUI.csproj
@@ -16,8 +16,8 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\TournamentTracker.BusinessLogic\TournamentTracker.BusinessLogic.csproj" />
     <ProjectReference Include="..\TournamentTracker.Domain\TournamentTracker.Domain.csproj" />
-    <ProjectReference Include="..\TournamentTracker\TournamentTracker.csproj" />
   </ItemGroup>
 
 </Project>
